force-app/main/default/objects/VORVO__c/VORVO__c.object-meta.xml
<CustomObject>
    <label>VOR/VO</label>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>VOR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VOR/VOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>