force-app/main/default/objects/VORVO__c/fields/ApprovedMarkUpCharter__c.field-meta.xml
<CustomField>
    <fullName>ApprovedMarkUpCharter__c</fullName>
    <formula>CostCharterUSD__c * PercentApprovedMarkUpCharter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Mark Up Charter (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>