force-app/main/default/objects/VORVO__c/fields/ApprovedMarkUpServices__c.field-meta.xml
<CustomField>
    <fullName>ApprovedMarkUpServices__c</fullName>
    <formula>CostServicesBLR__c  *  PercentApprovedMarkUpServices__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Mark Up Services (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>