force-app/main/default/objects/VORVO__c/fields/ApprovedProposalChaterUDS__c.field-meta.xml
<CustomField>
    <fullName>ApprovedProposalChaterUDS__c</fullName>
    <label>Approved Proposal Charter (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>