force-app/main/default/objects/VORVO__c/fields/ApprovedProposalServicesBRL__c.field-meta.xml
<CustomField>
    <fullName>ApprovedProposalServicesBRL__c</fullName>
    <label>Approved Proposal Services (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>