force-app/main/default/objects/VORVO__c/fields/CostCharterUSD__c.field-meta.xml
<CustomField>
    <fullName>CostCharterUSD__c</fullName>
    <label>Charter Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>