force-app/main/default/objects/VORVO__c/fields/CostServicesBLR__c.field-meta.xml
<CustomField>
    <fullName>CostServicesBLR__c</fullName>
    <label>Services Amount (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>