force-app/main/default/objects/VORVO__c/fields/DeltaChaterUSD__c.field-meta.xml
<CustomField>
    <fullName>DeltaChaterUSD__c</fullName>
    <formula>PerformedMarkUpCharterUSD__c  -  ApprovedMarkUpCharter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Charter (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>