force-app/main/default/objects/VORVO__c/fields/DeltaServicesBRL__c.field-meta.xml
<CustomField>
    <fullName>DeltaServicesBRL__c</fullName>
    <formula>PerformedMarkUpServicesBRL__c - ApprovedMarkUpServices__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Services (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>