force-app/main/default/objects/VORVO__c/fields/Letter__c.field-meta.xml
<CustomField>
    <fullName>Letter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Letter</label>
    <referenceTo>Letter__c</referenceTo>
    <relationshipName>VORs</relationshipName>
    <type>Lookup</type>
</CustomField>