force-app/main/default/objects/VORVO__c/fields/PercentApprovedMarkUpCharter__c.field-meta.xml
<CustomField>
    <fullName>PercentApprovedMarkUpCharter__c</fullName>
    <label>% Approved Mark Up Charter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>