force-app/main/default/objects/VORVO__c/fields/PercentApprovedMarkUpServices__c.field-meta.xml
<CustomField>
    <fullName>PercentApprovedMarkUpServices__c</fullName>
    <label>% Approved Mark Up Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>