force-app/main/default/objects/VORVO__c/fields/PercentPerformedMarkUpCharter__c.field-meta.xml
<CustomField>
    <fullName>PercentPerformedMarkUpCharter__c</fullName>
    <formula>(ApprovedProposalChaterUDS__c  /  CostCharterUSD__c) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Performed Mark Up Charter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>