force-app/main/default/objects/VORVO__c/fields/PercentPerformedMarkUpServices__c.field-meta.xml
<CustomField>
    <fullName>PercentPerformedMarkUpServices__c</fullName>
    <formula>(ApprovedProposalServicesBRL__c  /  CostServicesBLR__c) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Performed Mark Up Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>