force-app/main/default/objects/VORVO__c/fields/PercentProfitMaximizationChater__c.field-meta.xml
<CustomField>
    <fullName>PercentProfitMaximizationChater__c</fullName>
    <formula>PerformedMarkUpCharterUSD__c  /  ApprovedMarkUpCharter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Profit Maximization Charter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>