force-app/main/default/objects/VORVO__c/fields/PercentProfitMaximizationServices__c.field-meta.xml
<CustomField>
    <fullName>PercentProfitMaximizationServices__c</fullName>
    <formula>PerformedMarkUpServicesBRL__c  /  ApprovedMarkUpServices__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Profit Maximization Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>