force-app/main/default/objects/VORVO__c/fields/PerformedMarkUpCharterUSD__c.field-meta.xml
<CustomField>
    <fullName>PerformedMarkUpCharterUSD__c</fullName>
    <formula>CostCharterUSD__c  *  PercentPerformedMarkUpCharter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performed Mark Up Charter (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>