force-app/main/default/objects/VORVO__c/fields/PerformedMarkUpServicesBRL__c.field-meta.xml
<CustomField>
    <fullName>PerformedMarkUpServicesBRL__c</fullName>
    <formula>CostServicesBLR__c  *  PercentPerformedMarkUpServices__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performed Mark Up Services (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>