force-app/main/default/objects/VORVO__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <label>Proposal</label>
    <type>TextArea</type>
</CustomField>