force-app/main/default/objects/VORVO__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreed/Not signed</fullName>
            </value>
            <value>
                <fullName>Agreed/Signed</fullName>
            </value>
            <value>
                <fullName>Building the proposal</fullName>
            </value>
            <value>
                <fullName>Not agreed</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>