force-app/main/default/objects/VORVO__c/fields/TotalAmountBRL__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountBRL__c</fullName>
    <formula>ApprovedProposalServicesBRL__c / (1-0.1125)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Services (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>