force-app/main/default/objects/VORVO__c/fields/TotalAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountUSD__c</fullName>
    <formula>ApprovedProposalChaterUDS__c  / (1-0.1125)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Charter (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>