force-app/main/default/objects/VORVO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vessel__c</columns>
    <columns>Issue__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>TotalAmountUSD__c</columns>
    <columns>TotalAmountBRL__c</columns>
    <columns>PercentProfitMaximizationChater__c</columns>
    <columns>PercentProfitMaximizationServices__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Administrator</role>
        <role>Commercial</role>
        <role>VesselContractAdministrator</role>
        <role>Vessel_Contract_Read</role>
    </sharedTo>
</ListView>