force-app/main/default/objects/VORVO__c/listViews/MV27.listView-meta.xml
<ListView>
    <fullName>MV27</fullName>
    <columns>NAME</columns>
    <columns>Proposal__c</columns>
    <columns>Issue__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>TotalAmountBRL__c</columns>
    <columns>TotalAmountUSD__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vessel__c</field>
        <operation>contains</operation>
        <value>MV27</value>
    </filters>
    <label>MV27</label>
</ListView>